# VulkanTriangle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Ubuntu-Build.md  Windows-Build.md  Windows-Build.txt  conanfile.txt  main.cpp  shaders-generate.ps1  vcpkg.json
ffmpegusages/: read_video_info.cpp
